tests/errors/sem_assign1.java
public class sem_assign1 {
public static void main(String[] args){
char value  = "HhkOjtJMn";
}
}